--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -64,7 +64,7 @@
                 <div class="span12">
                     <div class="span8 pull-right btn-padding-left">
                         <input type="submit" class="btn thanx tab_margin gray-border" value="Submit" onclick="if (!Page_ClientValidate()){ this.disabled = false;} else{ this.disabled = true;}">
-                        <input type="reset" class="btn tab_margin cancel gray-border" value="Reset">                       
+                        <input type="reset" class="btn tab_margin cancel gray-border" onclick="window.location.href = '/Patients/InviteFriend'" value="Reset">                       
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
     });
 
     $(".input-block-level").keyup(function () {
-        Page_ClientValidate();
+        //Page_ClientValidate();
     });
 
     (function (i, s, o, g, r, a, m) {
