--- a/MiraiConsultMVC/Views/admin/assignquestion.cshtml
+++ b/MiraiConsultMVC/Views/admin/assignquestion.cshtml
@@ -140,9 +140,9 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @if (Model != null && Model.ToList().Count > 0)
+                                @if (Model != null)
                                 {
-                                for (int i = 0; i < Model.ToList().Count; i++)
+                                for (int i = 0; i < Model.Count(); i++)
                                 {
                                 if (i == 0)
                                 {
@@ -176,7 +176,7 @@
                                     </td>
                                 </tr>
                                 }
-                                } 
+                                }
                             </tbody>
                         </table>
                     </div>
